gnome-shell: fix slider being cropped a bit after MR

--- a/src/gnome-shell/gnome-shell-sass/widgets/_slider.scss
+++ b/src/gnome-shell/gnome-shell-sass/widgets/_slider.scss
@@ -17,7 +17,7 @@ $slider_size: 16px;
   -barlevel-overdrive-border-color: if($variant == 'light', darken($destructive_color, 4%), lighten($destructive_color, 2%)); //trough border when red;
   -barlevel-overdrive-separator-width:1px;
   // slider hander
-  -slider-handle-radius: $slider_size * 0.5; // half the size of the size
+  -slider-handle-radius: $slider_size / 2 - 0.5; // half the size of the size
   -slider-handle-border-width: 1px;
   -slider-handle-border-color: if($variant == 'light', $borders_color, $fg_color);
 
